# fyke

./: README.md  pyproject.toml
src/fyke/: main.py
src/fyke.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
